third_party/move/move-compiler-v2/tests/lambda/storable/doable_func.exp

Diagnostics:
error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:43:17
   │
43 │                 move |x| mod3::multiply(4, x)
   │                 ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:46:17
   │
46 │                 move |y| alt_multiply(x, y)
   │                 ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:49:17
   │
49 │                 move |y| mod3::multiply(x, y)
   │                 ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:51:17
   │
51 │                 move |x| multiply3(3, 2, x)
   │                 ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:53:17
   │
53 │                 move |x| mod3::multiply(7, x)
   │                 ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:55:17
   │
55 │                 move |x| { multiply3(4, 2, x) }
   │                 ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:57:17
   │
57 │                 move |x| multiply3(3, 3, x)
   │                 ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:61:17
   │
61 │                 move |z| multiply3(x + 1, y, z)
   │                 ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:64:17
   │
64 │                 move |x| alt_multiply(z, x) with copy
   │                 ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:64:45
   │
64 │                 move |x| alt_multiply(z, x) with copy
   │                                             ^^^^^^^^^ Move 2.2 language construct is not enabled: Abilities on function expressions

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:66:25
   │
66 │                 let g = move |x, y| mod3::multiply(x, y) with copy+drop;
   │                         ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:66:58
   │
66 │                 let g = move |x, y| mod3::multiply(x, y) with copy+drop;
   │                                                          ^^^^^^^^^^^^^^ Move 2.2 language construct is not enabled: Abilities on function expressions

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:67:17
   │
67 │                 move |x| g(11, x)
   │                 ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:69:25
   │
69 │                 let h = move |x| mod3::multiply(12, x) with copy;
   │                         ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:69:56
   │
69 │                 let h = move |x| mod3::multiply(12, x) with copy;
   │                                                        ^^^^^^^^^ Move 2.2 language construct is not enabled: Abilities on function expressions

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:70:17
   │
70 │                 move |x| { h(x) } with copy + drop
   │                 ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:70:35
   │
70 │                 move |x| { h(x) } with copy + drop
   │                                   ^^^^^^^^^^^^^^^^ Move 2.2 language construct is not enabled: Abilities on function expressions

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:72:25
   │
72 │                 let i = move |x| multiply3(2, 2, x);
   │                         ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:73:17
   │
73 │                 move |z| i(z)
   │                 ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:75:25
   │
75 │                 let i = move |x, y| { let q = y - 1; 0x42::mod3::multiply(x, q + 1)  };
   │                         ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
   ┌─ tests/lambda/storable/doable_func.move:76:17
   │
76 │                 move |x| i(15, x)
   │                 ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression
